---
source: tests/golden_tests.rs
input_file: tests/golden_tests/cli/compile_strict_loop.bend
---
@A = (((?((0 (* (* (a b)))) c) c) d) d)
  & @A ~ (a b)

@List/Cons = (a (b ((1 (a (b c))) c)))

@List/Nil = ((0 a) a)

@main = c
  & @A ~ (b c)
  & @List/Cons ~ (4 (a b))
  & @List/Cons ~ (4 (@List/Nil a))
